# esgi-rust-ppm

./: Cargo.toml  README.md  test.txt  test_result.txt
benches/: image_benchmark.rs
src/: build.rs  lib.rs  main.rs  pixel.rs
src/image/: extern_ppm_lib.rs  mod.rs  ppm_struct.rs  tests.rs
src/image_binary/: mod.rs
